--- a/modulos/modulo-03-HTML-e-CSS/site-street-fighter/CSS/estilo-site.css
+++ b/modulos/modulo-03-HTML-e-CSS/site-street-fighter/CSS/estilo-site.css
@@ -7,21 +7,21 @@
    }
         
         .menu {
-            width: 500px;
-            height: 40px;
-            border: solid;
-            border-radius: 20px;
-            border-color: rgba(224, 224, 224, 0.8);
-            margin: 350px auto 0px;
-            background-color: rgba(224, 224, 224, 0.4);
+            width: 550px;
+            height: 50px;
+            border: solid 1px;
+            border-radius: 15px;
+            border-color: rgba(200, 200, 200, 0.5);
+            margin: 340px auto 30px;
+            background-color: rgba(50, 50, 50, 0.2);
             color: white;
             font-size: 15px;
         }
         
             .menu > ul > li {
-                display: inline;
-                padding: 15px 10px;
-                margin: 15px 5px;
+                display: inline-block;
+                padding: 0px 15px 5px;
+                margin: 5px 10px;
             }
 
                 .menu > ul > li > a{
@@ -56,4 +56,14 @@
         a {
             text-decoration: none;
             color: black;
+        }
+
+        #blanka {      
+            float: left;
+        }
+
+
+        p{
+            margin: 7px;
+            text-align: justify;
         }
