--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/FichaTecnica.cshtml
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/FichaTecnica.cshtml
@@ -26,5 +26,5 @@
         <p><strong>SF4 nickname:</strong> "@(Model.SF4Nickname)".</p>
         <p><strong>SFA3 stage:</strong> @(Model.SFA3Stage)</p>
         <p><strong>SF2 stage:</strong> @(Model.SF2Stage)</p>
-        <p><strong>Golpes Especiais Famosos</strong> @(Model.GolpesFamosos)</p>
+        <p><strong>Golpes Especiais Famosos:</strong> @(Model.GolpesFamosos)</p>
  
