--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
@@ -16,9 +16,9 @@
 
     <div class="menu">
         <ul>
-            <li><a href="index.html">Início</a></li>
+            <li><a href="~/StreetFighter/Index">Início</a></li>
             <li><a href="https://www.google.com.br/?gfe_rd=cr&ei=veMIWNTyM9DK8ge0mIrIDQ#q=street+fighter&tbm=nws">Notícias</a></li>
-            <li><a href="ficha-tecnica.html">Ficha Técnica</a></li>
+            <li><a href="~/StreetFighter/FichaTecnica">Ficha Técnica</a></li>
             <li><a href="sobre.html">Sobre</a></li>
         </ul>
     </div>
