--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
@@ -9,6 +9,9 @@
 <head>
     <title>@ViewBag.Title</title>
     <meta charset="UTF-8">
+    <link rel="icon" href="http://www.gsarchives.net/gameboyadvance/super_street_fighter_2_turbo_revival/sprites/non-animated/chunli_icon.gif" type="image/x-icon" />
+    <link rel="shortcut icon" href="http://www.gsarchives.net/gameboyadvance/super_street_fighter_2_turbo_revival/sprites/non-animated/chunli_icon.gif" type="image/x-icon" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="~/Content/estilo-site.css">
 </head>
 
@@ -17,9 +20,9 @@
     <div class="menu">
         <ul>
             <li><a href="~/StreetFighter/Index">Início</a></li>
-            <li><a href="https://www.google.com.br/?gfe_rd=cr&ei=veMIWNTyM9DK8ge0mIrIDQ#q=street+fighter&tbm=nws">Notícias</a></li>
+            <li><a href="~/StreetFighter/Cadastro">Cadastro</a></li>
             <li><a href="~/StreetFighter/FichaTecnica">Ficha Técnica</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="~/StreetFighter/Sobre">Sobre</a></li>
         </ul>
     </div>
 
@@ -31,9 +34,9 @@
             @RenderBody()
         </div>
 
-
-
 </body>
+
+
 
 </html>
 
