feat(dot-net): adicionar novo exercicio, novos projects.

--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
@@ -20,8 +20,7 @@
     <div class="menu">
         <ul>
             <li><a href="~/StreetFighter/Index">Início</a></li>
-            <li><a href="~/StreetFighter/Cadastro">Cadastro</a></li>
-            <li><a href="~/StreetFighter/FichaTecnica">Ficha Técnica</a></li>
+            <li><a href="~/StreetFighter/ListaPersonagem">Lista De Personagens</a></li>
             <li><a href="~/StreetFighter/Sobre">Sobre</a></li>
         </ul>
     </div>
