--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Content/estilo-site.css
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Content/estilo-site.css
@@ -3,7 +3,6 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: top;
-    font-family: arial;
 }
 
 .menu {
@@ -23,7 +22,7 @@ body {
     .menu > ul > li {
         display: inline-block;
         padding: 0px 10px 5px;
-        margin: 5px 9px;
+        margin: 5px 15px;
     }
 
         .menu > ul > li > a {
@@ -75,22 +74,45 @@ p {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
-  height: 5px;
-  -webkit-border-radius: 5px;
+    width: 10px;
+    height: 5px;
+    -webkit-border-radius: 5px;
 }
 
 ::-webkit-scrollbar-track-piece {
-  background-color: #bababa;
-  -webkit-border-radius: 3px;
+    background-color: #bababa;
+    -webkit-border-radius: 3px;
 }
 
 ::-webkit-scrollbar-thumb:vertical {
-  height: 10px;
-  background-color: #000;
-  -webkit-border-radius: 3px;
+    height: 10px;
+    background-color: #000;
+    -webkit-border-radius: 3px;
 }
 
- .field-validation-error {
-            color: #a94442;
+.field-validation-error {
+    color: #a94442;
+}
+
+* {
+    font-family: arial;
+}
+
+h1, h2, h3 {
+    font-weight: bold;
+}
+
+
+    .nav-pills > li.active > a, .nav-pills > li.active > a:focus {
+        color: white;
+        background-color: black;
+    }
+
+        .nav-pills > li.active > a:hover {
+            background-color: white;
+            color: black;
         }
+
+#TituloLista {
+    margin-top: 50px;
+}
