--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Content/estilo-site.css
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Content/estilo-site.css
@@ -102,17 +102,23 @@ h1, h2, h3 {
     font-weight: bold;
 }
 
+.nav-pills > li.active > a, .nav-pills > li.active > a:focus {
+    color: white;
+    background-color: black;
+}
 
-    .nav-pills > li.active > a, .nav-pills > li.active > a:focus {
-        color: white;
-        background-color: black;
+    .nav-pills > li.active > a:hover {
+        background-color: white;
+        color: black;
     }
 
-        .nav-pills > li.active > a:hover {
-            background-color: white;
-            color: black;
-        }
+#sem-personagens {
+    margin-top: 30px;
+}
+.nav-pills{
+    margin-bottom: 40px;
+}
 
-#TituloLista {
-    margin-top: 50px;
+navbar-form{
+    margin-top: 30px;
 }
