--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/ListaPersonagem.cshtml
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/ListaPersonagem.cshtml
@@ -1,4 +1,4 @@
-﻿@model StreetFighter.Dominio.Personagem
+﻿@model List<StreetFighter.Dominio.Personagem>
 
 @{
     ViewBag.Title = "Lista de Personagens";
@@ -10,19 +10,27 @@
     <li role="presentation" class="active"><a href="~/StreetFighter/Cadastro">Novo Cadastro</a></li>
 </ul>
 
-<form class="navbar-form navbar-right" role="search">
-    <div class="form-group">
-        <input type="text" class="form-control" placeholder="Digite o nome...">
-    </div>
-    <button type="submit" class="btn btn-default">Pesquisa</button>
-</form>
-
-<h3 id="TituloLista">Personagens Cadastrados: </h3>
-
+@using (Html.BeginForm("ListaPersonagem","StreetFighter", FormMethod.Get))
+{
+   <form class="navbar-form navbar-right" role="search">
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Digite sua pesquisa..." name="filtro">
+        </div>
+        <button type="submit" class="btn btn-default">Pesquisar</button>
+    </form>
+}
 
 <div class="list-group">
-    
+    @if (Model == null)
     {
-        <a href="~/StreetFighter/FichaTecnica" class="list-group-item">@(Model.Nome)</a>
+        <p id="sem-personagens">@ViewBag.ListaVazia</p>
+    }
+    else
+    {
+        <h3 id="lista-personagens">Personagens Cadastrados: </h3>
+        foreach (var personagem in Model)
+        {
+            <a href="~/StreetFighter/FichaTecnica?Id=@(personagem.Id)" class="list-group-item">@(personagem.Nome)</a>
+        }
     }
 </div>
