--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Content/estilo-site.css
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Content/estilo-site.css
@@ -1,11 +1,11 @@
-body {
+body{
     background-image: url(imagens/background.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: top;
 }
 
-.menu {
+.menu{
     width: 550px;
     height: 50px;
     border: solid 1px;
@@ -19,19 +19,19 @@ body {
     padding-top: 10px;
 }
 
-    .menu > ul > li {
+    .menu > ul > li{
         display: inline-block;
         padding: 0px 10px 5px;
         margin: 5px 15px;
     }
 
-        .menu > ul > li > a {
+        .menu > ul > li > a{
             color: white;
             font-weight: bold;
             text-shadow: black 0.1em 0.1em 0.2em;
         }
 
-#titulo {
+#titulo{
     width: 60%;
     height: 50px;
     margin: 20px auto 0px;
@@ -45,7 +45,7 @@ body {
     font-weight: bold;
 }
 
-#conteudo {
+#conteudo{
     width: 60%;
     height: 600px;
     margin: 0px auto;
@@ -55,15 +55,15 @@ body {
     overflow-x: hidden;
 }
 
-a {
+a{
     text-decoration: none;
     color: black;
 }
 
-#personagem {
+#personagem{
     float: left;
     padding-right: 20px;
-    max-width: 250px;
+    max-width: 300px;
     width: auto;
 }
 
@@ -73,52 +73,62 @@ p {
     text-align: justify;
 }
 
-::-webkit-scrollbar {
+::-webkit-scrollbar{
     width: 10px;
     height: 5px;
     -webkit-border-radius: 5px;
 }
 
-::-webkit-scrollbar-track-piece {
+::-webkit-scrollbar-track-piece{
     background-color: #bababa;
     -webkit-border-radius: 3px;
 }
 
-::-webkit-scrollbar-thumb:vertical {
+::-webkit-scrollbar-thumb:vertical{
     height: 10px;
     background-color: #000;
     -webkit-border-radius: 3px;
 }
 
-.field-validation-error {
+.field-validation-error{
     color: #a94442;
+    font-weight: bold;
 }
 
 * {
     font-family: arial;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4{
     font-weight: bold;
 }
 
-.nav-pills > li.active > a, .nav-pills > li.active > a:focus {
-    color: white;
-    background-color: black;
+#sem-personagens{
+    margin-top: 40px;
 }
 
-    .nav-pills > li.active > a:hover {
-        background-color: white;
-        color: black;
-    }
-
-#sem-personagens {
-    margin-top: 30px;
-}
-.nav-pills{
+.col-sm-4{
     margin-bottom: 40px;
 }
 
-navbar-form{
-    margin-top: 30px;
+#pesquisa{
+    margin-top: 60px;
 }
+
+#imagem-retorno{
+    margin: 70px auto;
+}
+
+#mensagem-retorno{
+    text-align: center;
+}
+
+.list-group{
+    margin-top: 40px;
+}
+
+#voltar{
+    margin: auto;
+    margin-left: 20px;
+}
+
