feat(dot-net): adicionar métodos iniciais para acesso ao banco.

--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/Cadastro.cshtml
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/Cadastro.cshtml
@@ -10,6 +10,7 @@
 @using (Html.BeginForm("Salvar","StreetFighter", FormMethod.Post, new { @class = "form-horizontal" }))
 {
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.AntiForgeryToken()
 
     <div class="hidden">
         @Html.LabelFor(model => model.Id, new { @class = "col-sm-2 control-label" })
