--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/FichaTecnica.cshtml
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/FichaTecnica.cshtml
@@ -20,7 +20,7 @@ else
 }
 <p><strong>Data de Nascimento:</strong> @(String.Format("{0} de {1} de {2}.", Model.DataNascimento.Day, Model.DataNascimento.ToString("MMMM", new CultureInfo("pt-BR")), Model.DataNascimento.Year))</p>
 <p><strong>Altura:</strong> @(Model.Altura) cm.</p>
-<p><strong>Peso:</strong> @(Model.Peso) kg.</p>
+<p><strong>Peso:</strong> @(Model.Peso) kgs.</p>
 <p><strong>Origem:</strong> @(Model.Origem).</p>
 <p><strong>Golpes Especiais Famosos:</strong> @(Model.GolpesEspeciais).</p>
 
