--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Content/estilo-site.css
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Content/estilo-site.css
@@ -1,69 +1,75 @@
-body{
-    background-image: url(imagens/background.jpg);
+body {
+    background-image: url(imagens/back3.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: top;
+    background-size: 120%;
+    background-color: darkblue;
 }
 
-.menu{
+.menu {
     width: 550px;
     height: 50px;
     border: solid 1px;
-    border-radius: 15px;
-    border-color: rgba(150, 150, 150, 0.95);
-    margin: 450px auto 20px;
-    background-color: rgba(50, 50, 50, 0.5);
+    border-radius: 20px;
+    border-color: rgba(76, 85, 180, 0.55);
+    margin: 360px auto 20px;
+    background-color: rgba(76, 85, 142, 0.70);
     color: white;
     font-size: 15px;
     text-transform: uppercase;
     padding-top: 10px;
 }
 
-    .menu > ul > li{
+    .menu > ul > li {
         display: inline-block;
         padding: 0px 10px 5px;
         margin: 5px 15px;
     }
 
-        .menu > ul > li > a{
+        .menu > ul > li > a {
             color: white;
             font-weight: bold;
             text-shadow: black 0.1em 0.1em 0.2em;
         }
 
-#titulo{
+#titulo {
     width: 60%;
-    height: 50px;
-    margin: 20px auto 0px;
-    background-color: black;
-    font-size: 20px;
+    height: 60px;
+    margin: 50px auto 0px;
+    background-color: darkblue;
+    font-size: 22px;
     text-align: justify;
-    color: silver;
+    color: whitesmoke;
     line-height: 50px;
-    border-radius: 10px;
-    padding: 0px 40px;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    padding: 5px 40px 0px;
     font-weight: bold;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.55);
 }
 
-#conteudo{
+#conteudo {
     width: 60%;
-    height: 600px;
+    height: auto;
     margin: 0px auto;
-    background-color: rgba(150, 150, 150, 0.95);
-    border-radius: 10px;
-    padding: 20px 40px;
-    overflow-x: hidden;
+    background-color: rgba(76, 85, 142, 0.70);
+    padding: 20px 40px 100px;
+    color: whitesmoke;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.55);
+    overflow: auto;
 }
 
-a{
+a {
     text-decoration: none;
-    color: black;
+    color: whitesmoke;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.55);
 }
 
-#personagem{
+#personagem {
     float: left;
     padding-right: 20px;
-    max-width: 300px;
+    max-width: 230px;
     width: auto;
 }
 
@@ -73,24 +79,24 @@ p {
     text-align: justify;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 10px;
     height: 5px;
     -webkit-border-radius: 5px;
 }
 
-::-webkit-scrollbar-track-piece{
-    background-color: #bababa;
+::-webkit-scrollbar-track-piece {
+    background-color: #00008b;
     -webkit-border-radius: 3px;
 }
 
-::-webkit-scrollbar-thumb:vertical{
+::-webkit-scrollbar-thumb:vertical {
     height: 10px;
-    background-color: #000;
+    background-color: #fff;
     -webkit-border-radius: 3px;
 }
 
-.field-validation-error{
+.field-validation-error {
     color: #a94442;
     font-weight: bold;
 }
@@ -99,39 +105,75 @@ p {
     font-family: arial;
 }
 
-h1, h2, h3, h4{
+h1, h2, h3, h4 {
     font-weight: bold;
 }
 
-#sem-personagens{
+#sem-personagens {
     margin-top: 40px;
 }
 
-.col-sm-4{
+.col-sm-4 {
     margin-bottom: 40px;
+    text-shadow: 0px 0px rgba(0, 0, 0, 0.55);
 }
 
-#pesquisa{
+.col-sm-2, .col-sm-8 {
+    text-shadow: 0px 0px rgba(0, 0, 0, 0.55);
+}
+
+#pesquisa {
     margin-top: 60px;
 }
 
-#imagem-retorno{
-    margin: 50px 30%;
+#imagem-retorno {
+    margin: 50px 20%;
+    background-position: center;
+    min-width: 60%;
 }
 
-#mensagem-retorno{
+#mensagem-retorno {
     text-align: center;
 }
 
-.list-group{
+.list-group {
     margin-top: 40px;
 }
 
-#voltar{
-    margin: auto;
-    margin-left: 20px;
+#voltar {
+    margin-bottom: 50px;
 }
 
-#cadastro-fail{
-    margin-bottom: 50px;
+#botao-retorno {
+}
+
+#conteudo-login {
+    width: 50%;
+    height: 200px;
+    margin: 400px auto 0px;
+    background-color: rgba(76, 85, 142, 0.70);
+    border-radius: 30px;
+    border: solid 1px rgba(76, 85, 180, 0.55);
+    padding: 40px;
+    color: whitesmoke;
+    text-shadow: 2px 2px rgba(76, 85, 180, 0.55);
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.55);
+}
+
+#login {
+    color: black;
+}
+
+
+#senha {
+    margin: 5px 0px;
+}
+
+#username {
+    margin-top: 20px;
+}
+
+
+#cadastro-fail {
+    position: fixed;
 }
