--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/FichaTecnica.cshtml
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/FichaTecnica.cshtml
@@ -10,22 +10,23 @@
 
 <h2>@(Model.Nome)</h2>
 
-@if (Model.Imagem.Equals("default"))
-{
-    <img id="personagem" src="http://imguol.com/c/bol/fotos/84/2015/12/11/4-e-o-john-travolta-alias-fez-o-maior-sucesso-nos-gifs-confusos-1449831720205_300x300.jpg" alt="auto">
-}
-else
-{
-    <img id="personagem" src="@Model.Imagem" alt="auto">
-}
-<p><strong>Data de Nascimento:</strong> @(String.Format("{0} de {1} de {2}.", Model.DataNascimento.Day, Model.DataNascimento.ToString("MMMM", new CultureInfo("pt-BR")), Model.DataNascimento.Year))</p>
-<p><strong>Altura:</strong> @(Model.Altura) cm.</p>
-<p><strong>Peso:</strong> @(Model.Peso) kgs.</p>
-<p><strong>Origem:</strong> @(Model.Origem).</p>
-<p><strong>Golpes Especiais Famosos:</strong> @(Model.GolpesEspeciais).</p>
-
 <div id="voltar">
-    @Html.ActionLink("Voltar", "ListaPersonagem", null, new { @class = "col-sm-2 btn btn-default" })
+    @Html.ActionLink("Voltar", "ListaPersonagem", null, new { @class = "col-sm-2 col-sm-offset-10 btn btn-default" })
 </div>
 
+<div class="corpo">
+    @if (Model.Imagem.Equals("default"))
+    {
+        <img id="personagem" src="http://imguol.com/c/bol/fotos/84/2015/12/11/4-e-o-john-travolta-alias-fez-o-maior-sucesso-nos-gifs-confusos-1449831720205_300x300.jpg" alt="auto">
+    }
+    else
+    {
+        <img id="personagem" src="@Model.Imagem" alt="auto">
+    }
+    <p><strong>Data de Nascimento:</strong> @(String.Format("{0} de {1} de {2}.", Model.DataNascimento.Day, Model.DataNascimento.ToString("MMMM", new CultureInfo("pt-BR")), Model.DataNascimento.Year))</p>
+    <p><strong>Altura:</strong> @(Model.Altura) cm.</p>
+    <p><strong>Peso:</strong> @(Model.Peso) kg.</p>
+    <p><strong>Origem:</strong> @(Model.Origem).</p>
+    <p><strong>Golpes Especiais Famosos:</strong> @(Model.GolpesEspeciais).</p>
 
+</div>
