--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/Retorno.cshtml
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/Retorno.cshtml
@@ -8,4 +8,6 @@
 
 <img id="imagem-retorno" src="http://i2.kym-cdn.com/entries/icons/original/000/012/982/post-19715-Brent-Rambo-gif-thumbs-up-imgu-L3yP.gif">
 
-@Html.ActionLink("Voltar", "ListaPersonagem", null, new { @class = "col-sm-2 btn btn-default" })
+<div id="botao-retorno">
+@Html.ActionLink("Voltar", "ListaPersonagem", null, new { @class = "col-sm-2 col-sm-offset-10 btn btn-default" })
+</div>
