--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Content/estilo-site.css
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Content/estilo-site.css
@@ -144,9 +144,6 @@ h1, h2, h3, h4 {
     margin-bottom: 50px;
 }
 
-#botao-retorno {
-}
-
 #conteudo-login {
     width: 50%;
     height: 200px;
@@ -176,4 +173,5 @@ h1, h2, h3, h4 {
 
 #cadastro-fail {
     position: fixed;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.55);
 }
