feat(dot-net): adicionar exercicio da loja.

--- a/src/modulo-05-dot-net/aula-09/Loja/Loja.Web/Views/Login/Index.cshtml
+++ b/src/modulo-05-dot-net/aula-09/Loja/Loja.Web/Views/Login/Index.cshtml
@@ -5,6 +5,8 @@
 
 <h2>Login</h2>
 
+<p>@ViewBag.Mensagem</p>
+
 @using (Html.BeginForm("Entrar", "Login", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
