--- a/modulos/modulo-05-dot-net/Loja/Loja.Web/Views/Cadastro/Retorno.cshtml
+++ b/modulos/modulo-05-dot-net/Loja/Loja.Web/Views/Cadastro/Retorno.cshtml
@@ -5,4 +5,4 @@
 
 <h4>@ViewBag.Mensagem</h4>
 
-@Html.ActionLink("Voltar", "Lista", null, new { @class = "col-sm-2 col-sm-offset-10 btn btn-default" })
+@Html.ActionLink("Voltar", "Index", null, new { @class = "col-sm-2 col-sm-offset-10 btn btn-default" })
