--- a/modulos/modulo-05-dot-net/Loja/Loja.Web/Views/Shared/_Layout.cshtml
+++ b/modulos/modulo-05-dot-net/Loja/Loja.Web/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Loja De Produtos", "Lista", "Cadastro", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Loja De Produtos", "Index", "Cadastro", new { area = "" }, new { @class = "navbar-brand" })
             </div>
         </div>
     </div>
